k8s-manifests/eva-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eva-web
  labels:
    app: eva-web
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: eva-web
